# Exercice1

./: .gitignore  CMakeLists.txt  README.md  pretty.ps1
cmake/: common.cmake
examples/chickendodge/: CMakeLists.txt
examples/chickendodge/data/: equipe.txt
examples/chickendodge/data/scenes/: play.json
examples/chickendodge/data/shaders/: deformation.frag  renderquad.frag  sprite.frag
examples/chickendodge/include/chickendodge/components/: backgroundloader.h  chicken.h  countdown.h  player.h  referee.h  rupee.h
examples/chickendodge/include/chickendodge/pch/: precomp.h
examples/chickendodge/src/: game.cpp
examples/chickendodge/src/components/: backgroundloader.cpp  chicken.cpp  chickenspawner.cpp  countdown.cpp  player.cpp  referee.cpp  rupee.cpp  timer.cpp
include/simplege/: commandline.h  entity.h  game.h  image.h  math.h  references.h  resources.h  simplege.h
include/simplege/components/: camera.h  component.h  compositor.h  debugdrawcalls.h  deformationcompositor.h  keyboardinput.h  layer.h  rawsprite.h  rendercompositor.h  sprite.h  spritesheet.h  textsprite.h  texture.h  visual.h
include/simplege/graphics/: buffer.h  program.h  rendertexture.h  shader.h  texture.h
include/simplege/pch/: precomp.h
include/simplege/systems/: displaysystem.h  entitysystem.h  logicsystem.h  physicsystem.h
lib/gl-cpp/: CMakeLists.txt
lib/gl-cpp/include/gl-cpp/: basetypes.h  buffer.h  context.h  framebuffer.h  gl-cpp.h  program.h  renderbuffer.h  shader.h  shaderattribute.h  shaderuniform.h  texture.h  vertexarray.h
lib/gl-cpp/include/gl-cpp/pch/: precomp.h
src/: commandline.cpp  entity.cpp  game.cpp  image.cpp  resources.cpp  scene.cpp
src/components/: camera.cpp  collider.cpp  component.cpp  compositor.cpp  compositor.h  debugdrawcalls.cpp  deformationcompositor.cpp  enabler.cpp  keyboardinput.cpp  layer.cpp  position.cpp  rawsprite.cpp  rendercompositor.cpp  sprite.cpp  spritesheet.cpp  textsprite.cpp  texture.cpp  texture.h
